# sanjou

./: .env.example  .gitignore  CLAUDE.md  DESIGN_GUIDE.md  firebase.json  firestore.rules  index.html  package-lock.json  package.json  playwright.config.ts
.github/workflows/: pages.yml  release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/common/: Button.css  Button.tsx  Checkbox.css  Checkbox.tsx  Modal.css  Modal.tsx  SubeteTaskPicker.css  SubeteTaskPicker.tsx  Timer.css  Timer.tsx  Toast.css  Toast.tsx  index.ts
src/components/views/: AuthView.css  AuthView.tsx  BlockView.css  BlockView.tsx  BreakView.css  BreakView.tsx  HistoryView.css  HistoryView.tsx  RightNowListPanel.css  RightNowListPanel.tsx  SettingsView.css  SettingsView.tsx  ShortcutsOverlay.css  ShortcutsOverlay.tsx  StatsView.css  StatsView.tsx  TaskNotesModal.css  TaskNotesModal.tsx  TaskPicker.css  TaskPicker.tsx  index.ts
src/hooks/: useAudio.ts  useAuth.ts  useBlocks.ts  useBreaks.ts  useDeepLink.ts  useExport.ts  useKeyboard.ts  useNotification.ts  useRightNowList.ts  useStats.ts  useSubeteTasks.ts  useSync.ts  useTaskNotes.ts  useTasks.ts  useTimer.ts
src/models/: index.ts
src/store/: settingsStore.ts  toastStore.ts  uiStore.ts
src/styles/: global.css
src/sync/: completionSync.ts  firebaseAuth.ts  firebaseConfig.ts  firebaseSync.ts  yjsProvider.ts
tests/: app.spec.ts
website/: index.html
