[package]
name = "sanjou"
version = "0.1.0"
description = "Block Method productivity app"
authors = ["you"]
edition = "2021"

[lib]
name = "sanjou_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
